microtwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-two-deplo
  labels:
    app: api-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-two
  template:
    metadata:
      labels:
        app: api-two
    spec:
      containers:
      - name: api-two
        image: microtwo-image
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
        volumeMounts:
        - name: db-data
          mountPath: /app/db/microtwo.db
      volumes:
      - name: db-data
        hostPath:
          path: /host/microtwo/db/microtwo.db
          type: File
---
apiVersion: v1
kind: Service
metadata:
  name: api-two-service
spec:
  selector:
    app: api-two
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
