microusr.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-usr-service
  namespace: appspace
spec:
  selector:
    app: api-usr
  ports:
    - name: http-usr
      port: 3005
      targetPort: 3005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-usr-deplo
  namespace: appspace
  labels:
    app: api-usr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-usr
  template:
    metadata:
      labels:
        app: api-usr
    spec:
      serviceAccountName: usr-acc
      containers:
      - name: api-usr
        image: microusr-image
        imagePullPolicy: Never
        ports:
        - containerPort: 3005
        volumeMounts:
        - name: usr-data
          mountPath: /app/db/microusr.db
      volumes:
      - name: usr-data
        hostPath:
          path: /host/microusr/db/microusr.db 
          type: File
# minikube mount $HOME:/host is necessary
# or minikube start --mount-string="$HOME:/host" --mount
