nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deplo
  labels:
    app: nginx-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-d
  template:
    metadata:
      labels:
        app: nginx-d
    spec:
      containers:
      - name: nginx-d
        image: nginx-image
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-d
  type: LoadBalancer  #Accepts external request by assigning the service an IPaddr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
