postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: kcloak
  labels:
    name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres
        imagePullPolicy: IfNotPresent
        ports:
        - name: pg-port
          containerPort: 5432
        volumeMounts:
        - name: mini-volume
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: mini-volume
        #hostPath:
          #path: /host/p-data 
        persistentVolumeClaim:
          claimName: postgres-miniv

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: kcloak
spec:
  ports:
    - name: pg-port
      port: 5432
      targetPort: 5432
      nodePort: 30432
  selector:
    app: postgres
  type: NodePort
