probe.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-probe-service
  namespace: appspace
spec:
  selector:
    app: api-probe
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-probe-deplo
  namespace: appspace
  labels:
    app: api-probe
spec:
  selector:
    matchLabels:
      app: api-probe
  replicas: 1
  template:
    metadata:
      labels:
        app: api-probe
    spec:
      serviceAccountName: probe-acc
      containers:
        - name: api-probe
          image: probe-image
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
